# automatic-speech-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  clean_up.sh  experiments.ipynb  pyproject.toml  requirements.txt  run.ipynb  task_01.ipynb  task_02.ipynb
exp/: result.csv
exp/preds/: phn_pred.npy  phn_target.npy  utt_pred.npy  utt_target.npy  word_pred.npy  word_target.npy
notebooks/: experiments.ipynb
results/: FpuiovvSPYc.json  SCWFVd_FiAU.json  Y8tlFLIjyMU.srt  Y8tlFLIjyMU.txt
results/assessment_01/: 54AYOd5S7uo-asr.json  54AYOd5S7uo-speaker-diarization.json  Y8tlFLIjyMU-asr.json  Y8tlFLIjyMU-speaker-diarization.json  Y8tlFLIjyMU.srt  Y8tlFLIjyMU.txt
src/asr/: collect_data.py  model.py  parser.py  preprocess.py  utils.py
src/asr/utils/: collect_data.py  parser.py  webvtt.py
